--- a/src/styles/_mobileNavBar.scss
+++ b/src/styles/_mobileNavBar.scss
@@ -1,12 +1,12 @@
 .mobileNavBar {
   display: flex;
-  background-color: $darkGray;
+  background-color: #171717;
   align-items: center;
   height: 10vh;
   min-height: 85px;
   width: 100%;
   position: fixed;
-  opacity: 0.85;
+  justify-content: space-between;
   p {
     display: flex;
     align-items: center;
@@ -15,7 +15,53 @@
     font-family: $mainFontFamily;
     text-transform: uppercase;
     align-self:center;
-    padding-left: 30px;
+    padding-left: 15px;
+  }
+  .fullScreenNav {
+    display: none;
+    @include desktop {
+      display: flex;
+      flex-basis: 80%;
+      align-items: center;
+      justify-content: flex-end;
+      align-items: center;
+      min-width: 1000px;
+      height: 100%;
+      .fullScreenButtonContainer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        align-self: flex;
+        height: 100%;
+        width: 80%;
+        button {
+          width: 200px;
+          height: 50px;
+          background: transparent;
+          border: none;
+          color: $coreJungleGreen;
+          text-transform: uppercase;
+          font-family: $mainFontFamily;
+          font-size: 14px;
+          border-radius: 50px;
+          transition: 800ms;
+          margin-right: 5px;
+          &:hover {
+            cursor: pointer;
+            background: $coreWhite;
+            transition: 500ms;
+            border-radius: 50px;
+          }
+          &:focus {
+            outline: 0;
+            background: $coreJungleGreen;
+            color: white;
+            border-radius: 50px;
+            transition: 500ms;
+          }
+        }
+      }
+    }
   }
 }
 .openButton {
@@ -23,10 +69,13 @@
   border: none;
   color: $coreJungleGreen;
   align-self:center;
-  padding-right: 30px;
+  padding-right: 15px;
   font-size: $fontSizeRegular;
   font-family: $mainFontFamily;
   text-transform: uppercase;
+  @include desktop {
+    display: none;
+  }
   &:hover {
     cursor: pointer;
   }
